added html and css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <input type="submit" class="login-button" value="регистрация">
                 <a href="#">забыли пароль?</a>
             </form>
-            <nav>
+            <nav class="navig-wrap">
                 <ul class="navig">
                     <li><a href="#"><img src="img/home.png" alt="#" /></a></li>
                     <li><a href="#"><img src="img/site-map.png" alt="#"></a></li>
@@ -39,58 +39,167 @@
             </nav>
         </header>
         <main>
-            <form action="" class="search-by-car"></form>
-            <form action="" class="search-tires"></form>
-            <form action="" class="search-drives"></form>
-            <section class="wrap-catalog">
-                <h1>Каталог продукции</h1>
+            <aside class="wrap-catalog clearfix">
+                <h1 class="title title-of-catalog">КАТАЛОГ ПРОДУКЦИИ:</h1>
                 <ul class="catalog">
                     <li>
+                        <span>ШИНЫ</span>
                         <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li><a href="#">Наименование 1</a></li>
+                            <li><a href="#">Наименование 2</a></li>
+                            <li><a href="#">Наименование 3</a></li>
+                            <li><a href="#">Наименование 4</a></li>
                         </ul>
                     </li>
                     <li>
+                        <span>ДИСКИ</span>
                         <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li><a href="#">Наименование 1</a></li>
+                            <li><a href="#">Наименование 2</a></li>
+                            <li><a href="#">Наименование 3</a></li>
+                            <li><a href="#">Наименование 4</a></li>
                         </ul>
                     </li>
                     <li>
+                        <span>БОЛТЫ</span>
                         <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
+                            <li><a href="#">Наименование 1</a></li>
+                            <li><a href="#">Наименование 2</a></li>
+                            <li><a href="#">Наименование 3</a></li>
+                            <li><a href="#">Наименование 4</a></li>
                         </ul>
                     </li>
                 </ul>
-            </section>
-            <div class="content"></div>
-            <section>
-                <ul class="brands">
-                    <li>
-                        <ul>
-                            <li><input type="checkbox" name="" id=""></li>
-                            <li><input type="checkbox" name="" id=""></li>
-                            <li><input type="checkbox" name="" id=""></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul>
-                            <li><input type="checkbox" name="" id=""></li>
-                            <li><input type="checkbox" name="" id=""></li>
-                            <li><input type="checkbox" name="" id=""></li>
-                        </ul>
-                    </li>
-                </ul>
-            </section>
+            </aside>
+            <div class="content clearfix">
+                <figure>
+                    <figcaption>
+                        <span class="company">Goodyear</span>
+                        <span class="model">Ultra Grip Extreme</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">90.00 <span>г</span>рн.</span>
+                </figure>
+                <figure>
+                    <figcaption>
+                        <span class="company">Nokian</span>
+                        <span class="model">Hakkapeliitta R</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">115.00 <span>г</span>рн.</span>
+                </figure>
+                <figure>
+                    <figcaption>
+                        <span class="company">Hankook</span>
+                        <span class="model">K 708 155/65 R14</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">393.00 <span>г</span>рн.</span>
+                </figure>
+                <figure>
+                    <figcaption>
+                        <span class="company">Goodyear</span>
+                        <span class="model">Ultra Grip Extreme</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">90.00 <span>г</span>рн.</span>
+                </figure>
+                <figure>
+                    <figcaption>
+                        <span class="company">Nokian</span>
+                        <span class="model">Hakkapeliitta R</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">115.00 <span>г</span>рн.</span>
+                </figure>
+                <figure>
+                    <figcaption>
+                        <span class="company">Hankook</span>
+                        <span class="model">K 708 155/65 R14</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">393.00 <span>г</span>рн.</span>
+                </figure>
+                <figure>
+                    <figcaption>
+                        <span class="company">Goodyear</span>
+                        <span class="model">Ultra Grip Extreme</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">90.00 <span>г</span>рн.</span>
+                </figure>
+                <figure>
+                    <figcaption>
+                        <span class="company">Nokian</span>
+                        <span class="model">Hakkapeliitta R</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">115.00 <span>г</span>рн.</span>
+                </figure>
+                <figure>
+                    <figcaption>
+                        <span class="company">Hankook</span>
+                        <span class="model">K 708 155/65 R14</span>
+                    </figcaption>
+                    <img src="img/item.jpg" alt="">
+                    <span class="price">393.00 <span>г</span>рн.</span>
+                </figure>
+            </div>
+            <aside class="wrap-brands clearfix">
+                <form action="#">
+                    <h1 class="title title-of-brands">БРЕНДЫ:</h1>
+                    <ul class="brands">
+                        <li>
+                            <span>ШИНЫ</span>
+                            <ul>
+                                <li>
+                                    <input type="checkbox" name="brand" id="brand_1">
+                                    <label for="">Бренд 1</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="brand" id="brand_2">
+                                    <label for="">Бренд 2</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="brand" id="brand_3">
+                                    <label for="">Бренд 3</label>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <span>ДИСКИ</span>
+                            <ul>
+                                <li>
+                                    <input type="checkbox" name="brand" id="brand_1">
+                                    <label for="">Бренд 1</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="brand" id="brand_2">
+                                    <label for="">Бренд 2</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" name="brand" id="brand_3">
+                                    <label for="">Бренд 3</label>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <input type="button" value="ВЫБРАТЬ">
+                </form>
+            </aside>
+            <aside class="brand-logos">
+                <img src="img/brand-logos.png" alt="">
+            </aside>
         </main>
+        <footer>
+            <ul>
+                <li class="none"><a href="#">О компании</a></li>
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Статьи</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <p>Создание сайта © Global Vision</p>
+        </footer>
     </div>
 </body>
 </html>
