update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <div class="wrap">
         <header>
             <adress>(044)123-45-67 (044)567-89-10</adress>
-            <form action="" class="sign-in">
+            <form action="#" class="sign-in">
                 <input type="text" class="text" placeholder="логин">
-                <input type="password" class="text" name="" id="" placeholder="пароль">
+                <input type="password" class="text" placeholder="пароль">
                 <input type="submit" class="login-button" value="вход">
                 <span>|</span>
-                <input type="submit" class="login-button" value="регистрация">
+                <a href="#" class="login-button">регистрация</a>
                 <a href="#">забыли пароль?</a>
             </form>
             <nav class="navig-wrap">
@@ -34,7 +34,10 @@
                     <li><a href="#">ДОСТАВКА</a></li>
                     <li><a href="#">СТАТЬИ</a></li>
                     <li><a href="#">КОНТАКТЫ</a></li>
-                    <li class="card-block"><a href="#"></a></li>
+                </ul>
+                <ul class="card-block">
+                    <li>товаров:<span>0</span></li>
+                    <li>на сумму: <span>0,00 грн.</span></li>
                 </ul>
             </nav>
         </header>
@@ -72,78 +75,96 @@
                 </ul>
             </aside>
             <div class="content clearfix">
-                <figure>
-                    <figcaption>
-                        <span class="company">Goodyear</span>
-                        <span class="model">Ultra Grip Extreme</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">90.00 <span>г</span>рн.</span>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <span class="company">Nokian</span>
-                        <span class="model">Hakkapeliitta R</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">115.00 <span>г</span>рн.</span>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <span class="company">Hankook</span>
-                        <span class="model">K 708 155/65 R14</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">393.00 <span>г</span>рн.</span>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <span class="company">Goodyear</span>
-                        <span class="model">Ultra Grip Extreme</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">90.00 <span>г</span>рн.</span>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <span class="company">Nokian</span>
-                        <span class="model">Hakkapeliitta R</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">115.00 <span>г</span>рн.</span>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <span class="company">Hankook</span>
-                        <span class="model">K 708 155/65 R14</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">393.00 <span>г</span>рн.</span>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <span class="company">Goodyear</span>
-                        <span class="model">Ultra Grip Extreme</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">90.00 <span>г</span>рн.</span>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <span class="company">Nokian</span>
-                        <span class="model">Hakkapeliitta R</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">115.00 <span>г</span>рн.</span>
-                </figure>
-                <figure>
-                    <figcaption>
-                        <span class="company">Hankook</span>
-                        <span class="model">K 708 155/65 R14</span>
-                    </figcaption>
-                    <img src="img/item.jpg" alt="">
-                    <span class="price">393.00 <span>г</span>рн.</span>
-                </figure>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Goodyear</span>
+                            <span class="model">Ultra Grip Extreme</span>
+                        </figcaption>
+                        <img src="img/item.jpg" alt="">
+                        <span class="price">90.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Nokian</span>
+                            <span class="model">Hakkapeliitta R</span>
+                        </figcaption>
+                        <img src="img/item-2.jpg" alt="">
+                        <span class="price">115.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Hankook</span>
+                            <span class="model">K 708 155/65 R14</span>
+                        </figcaption>
+                        <img src="img/item-3.jpg" alt="">
+                        <span class="price">393.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Goodyear</span>
+                            <span class="model">Ultra Grip Extreme</span>
+                        </figcaption>
+                        <img src="img/item.jpg" alt="">
+                        <span class="price">90.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Nokian</span>
+                            <span class="model">Hakkapeliitta R</span>
+                        </figcaption>
+                        <img src="img/item-2.jpg" alt="">
+                        <span class="price">115.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Hankook</span>
+                            <span class="model">K 708 155/65 R14</span>
+                        </figcaption>
+                        <img src="img/item-3.jpg" alt="">
+                        <span class="price">393.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Goodyear</span>
+                            <span class="model">Ultra Grip Extreme</span>
+                        </figcaption>
+                        <img src="img/item.jpg" alt="">
+                        <span class="price">90.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Nokian</span>
+                            <span class="model">Hakkapeliitta R</span>
+                        </figcaption>
+                        <img src="img/item-2.jpg" alt="">
+                        <span class="price">115.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
+                <a href="#">
+                    <figure>
+                        <figcaption>
+                            <span class="company">Hankook</span>
+                            <span class="model">K 708 155/65 R14</span>
+                        </figcaption>
+                        <img src="img/item-3.jpg" alt="">
+                        <span class="price">393.00 <span class="currency">грн.</span></span>
+                    </figure>
+                </a>
             </div>
             <aside class="wrap-brands clearfix">
                 <form action="#">
@@ -153,16 +174,16 @@
                             <span>ШИНЫ</span>
                             <ul>
                                 <li>
-                                    <input type="checkbox" name="brand" id="brand_1">
-                                    <label for="">Бренд 1</label>
+                                    <input type="checkbox" name="brand" id="tires_brand_1">
+                                    <label for="tires_brand_1">Бренд 1</label>
                                 </li>
                                 <li>
-                                    <input type="checkbox" name="brand" id="brand_2">
-                                    <label for="">Бренд 2</label>
+                                    <input type="checkbox" name="brand" id="tires_brand_2">
+                                    <label for="tires_brand_2">Бренд 2</label>
                                 </li>
                                 <li>
-                                    <input type="checkbox" name="brand" id="brand_3">
-                                    <label for="">Бренд 3</label>
+                                    <input type="checkbox" name="brand" id="tires_brand_3">
+                                    <label for="tires_brand_3">Бренд 3</label>
                                 </li>
                             </ul>
                         </li>
@@ -170,35 +191,35 @@
                             <span>ДИСКИ</span>
                             <ul>
                                 <li>
-                                    <input type="checkbox" name="brand" id="brand_1">
-                                    <label for="">Бренд 1</label>
+                                    <input type="checkbox" name="brand" id="rims_brand_1">
+                                    <label for="rims_brand_1">Бренд 1</label>
                                 </li>
                                 <li>
-                                    <input type="checkbox" name="brand" id="brand_2">
-                                    <label for="">Бренд 2</label>
+                                    <input type="checkbox" name="brand" id="rims_brand_2">
+                                    <label for="rims_brand_2">Бренд 2</label>
                                 </li>
                                 <li>
-                                    <input type="checkbox" name="brand" id="brand_3">
-                                    <label for="">Бренд 3</label>
+                                    <input type="checkbox" name="brand" id="rims_brand_3">
+                                    <label for="rims_brand_3">Бренд 3</label>
                                 </li>
                             </ul>
                         </li>
                     </ul>
-                    <input type="button" value="ВЫБРАТЬ">
+                    <input type="submit" value="ВЫБРАТЬ" class="btn">
                 </form>
             </aside>
             <aside class="brand-logos">
-                <img src="img/brand-logos.png" alt="">
+                <img src="img/brand-logos.png" alt="#">
             </aside>
         </main>
         <footer>
             <ul>
-                <li class="none"><a href="#">О компании</a></li>
+                <li class="first_li"><a href="#">О компании</a></li>
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Статьи</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
-            <p>Создание сайта © Global Vision</p>
+            <p class="copyright">Создание сайта &copy; Global Vision</p>
         </footer>
     </div>
 </body>
